extends Control


# building selection
func _on_button_pressed():
	BuildingsManager.selected_building = 1
	
func _on_button_2_pressed():
	BuildingsManager.selected_building = 2

func _on_button_3_pressed():
	BuildingsManager.selected_building = 3
	
func _on_button_4_pressed():
	BuildingsManager.selected_building = 4
	
func _on_button_5_pressed():
	BuildingsManager.selected_building = 5
	
func _on_button_6_pressed():
	BuildingsManager.selected_building = 6
	
func _on_button_7_pressed():
	BuildingsManager.selected_building = 7
	
func _on_button_8_pressed():
	BuildingsManager.selected_building = 8

func _on_button_9_pressed():
	BuildingsManager.selected_building = 9
